--- a/index.html
+++ b/index.html
@@ -73,5 +73,7 @@
 <li>Mail-a-student Tilburg University</li>
 <li>Editor in chief on a diverse array of gaming-related websites</li>
 </ul>
+<h3 id="numerical-simulation-assignments">Numerical Simulation Assignments</h3>
+<p><a href="http://mjwvandenberg.github.io/SecondAssignment" title="Assignment 2 Part A">Assignment 2A</a></p>
 </body>
 </html>
