--- a/index.html
+++ b/index.html
@@ -74,6 +74,6 @@
 <li>Editor in chief on a diverse array of gaming-related websites</li>
 </ul>
 <h3 id="numerical-simulation-assignments">Numerical Simulation Assignments</h3>
-<p><a href="http://mjwvandenberg.github.io/SecondAssignment" title="Assignment 2 Part A">Assignment 2A</a></p>
+<p><a href="http://mjwvandenberg.github.io/SecondAssignment" title="Assignment 2 Part A">Assignment 2A</a> <a href="http://mjwvandenberg.github.io/Assignment2B/main.html" title="Assignment 2 Part B">Assignment 2B</a></p>
 </body>
 </html>
